fix --measure variable and alignments

--- a/styles.css
+++ b/styles.css
@@ -93,7 +93,7 @@ select {
   --shade-brand-orange: hsl(12, 88%, 79%);
   --shade-dark-blue-300: hsl(228, 39%, 80%);
 
-  --measure: 69.375rem;
+  --measure: 60rem;
 
   --spacer: 1rem;
 }
@@ -141,12 +141,6 @@ p {
 
   padding-block: 2.8125rem;
   position: relative;
-}
-
-@media (min-width: 1024px) {
-  .header {
-    --measure: 880px;
-  }
 }
 
 /*----------------- 
@@ -330,8 +324,6 @@ p {
   }
 
   .hero-text_content {
-    justify-self: end;
-
     align-items: flex-start;
   }
 
@@ -356,16 +348,22 @@ p {
   --spacer: 93px;
 
   margin-block-start: var(--spacer);
+  margin-block-end: calc(var(--spacer) - 62px);
   margin-inline: auto;
   max-inline-size: var(--measure);
 }
 
 @media (min-width: 768px) {
+  .info {
+    margin-block-end: calc(142px - var(--spacer));
+  }
+
   /* info layout */
   .info {
     display: grid;
     grid-template-columns: 1fr 1fr;
     grid-template-rows: 1fr;
+    justify-content: space-between;
   }
 
   .info__hook {
@@ -403,7 +401,7 @@ p {
   }
 
   .info__hook-title {
-    font-size: 2.5rem;
+    font-size: 2rem;
     font-weight: 700;
     margin-block-end: 24px;
     text-align: start;
